[gd_scene load_steps=37 format=3 uid="uid://0akqp4hyif73"]

[ext_resource type="Script" path="res://scripts/movement.gd" id="1_lfbyx"]
[ext_resource type="Script" path="res://scripts/playerController.gd" id="1_vsuuo"]
[ext_resource type="PackedScene" uid="uid://71i0tvyei28c" path="res://scenes/san_gauge.tscn" id="2_hqood"]
[ext_resource type="StyleBox" uid="uid://homa26xjytmx" path="res://assets/textures/UI-elements/styleBoxes/panel.tres" id="3_78fr5"]
[ext_resource type="StyleBox" uid="uid://d3hgcb4ery8wq" path="res://assets/textures/UI-elements/styleBoxes/scroll.tres" id="4_kg58h"]
[ext_resource type="Theme" uid="uid://8qfvurhug2dj" path="res://assets/textures/UI-themes/menu.tres" id="4_ttsoy"]
[ext_resource type="Theme" uid="uid://blx5w8iuks3tp" path="res://assets/textures/UI-themes/level.tres" id="5_340rr"]
[ext_resource type="PackedScene" uid="uid://c4s5a2xw2aimj" path="res://scenes/volume.tscn" id="5_cmc5j"]
[ext_resource type="Texture2D" uid="uid://dmetxwn21sadp" path="res://assets/textures/UI-elements/pause.png" id="8_xaoot"]
[ext_resource type="Texture2D" uid="uid://bk6w3k153meyf" path="res://assets/textures/UI-elements/pauseDis.png" id="12_3pav5"]
[ext_resource type="StyleBox" uid="uid://d4hejc61s8x7e" path="res://assets/textures/UI-elements/styleBoxes/smolButtonBrass.tres" id="12_7mhwv"]
[ext_resource type="StyleBox" uid="uid://bs8bdldqu8nwo" path="res://assets/textures/UI-elements/styleBoxes/smolButton.tres" id="13_ixn2h"]
[ext_resource type="AudioStream" uid="uid://duru6y346mfwg" path="res://assets/audio/music/level/Main Game Sanity 100 - 90.mp3" id="13_ttcps"]
[ext_resource type="AudioStream" uid="uid://dgrggbupho5yd" path="res://assets/audio/music/level/Main Game Sanity 89 - 80.mp3" id="14_85mus"]
[ext_resource type="ButtonGroup" uid="uid://dvfrb846jlrhr" path="res://assets/textures/UI-elements/buttonGroups/speedGroup.tres" id="14_pdgxm"]
[ext_resource type="AudioStream" uid="uid://buvluwn3kaoia" path="res://assets/audio/sfx/level Up/Level Up Option 2.mp3" id="17_xkyus"]
[ext_resource type="AudioStream" uid="uid://1g3f18lp2ci8" path="res://assets/audio/sfx/1 but higher.wav" id="18_c2c1g"]
[ext_resource type="AudioStream" uid="uid://h1b4ovmjuvb6" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 1.mp3" id="18_xxwj4"]
[ext_resource type="AudioStream" uid="uid://b12h8p34ken7l" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 2.mp3" id="19_hrqua"]
[ext_resource type="AudioStream" uid="uid://doebfyaj76i3e" path="res://assets/audio/sfx/1.wav" id="19_wd568"]
[ext_resource type="AudioStream" uid="uid://bupctqwrhvwdl" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 3.mp3" id="20_3ague"]
[ext_resource type="PackedScene" uid="uid://k1tqb2qaw6ao" path="res://scenes/toolBox.tscn" id="20_3h17r"]
[ext_resource type="AudioStream" uid="uid://c5orp3pngxua4" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 4.mp3" id="21_kfdqh"]
[ext_resource type="AudioStream" uid="uid://c3fym77dm05e5" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 5 option 2, which also went a bit out of hand.mp3" id="22_gjvw2"]
[ext_resource type="PackedScene" uid="uid://xkc12b53rvg" path="res://scenes/generator.tscn" id="22_qg68g"]
[ext_resource type="AudioStream" uid="uid://cfh7crptxwpnq" path="res://assets/audio/sfx/New Stuff/Damage Ausrüfe/Damage 5.mp3" id="23_8fldy"]
[ext_resource type="Script" path="res://scripts/toolHandler.gd" id="32_ecriy"]
[ext_resource type="PackedScene" uid="uid://qxhusqbo07v" path="res://scenes/potionShelf.tscn" id="32_pfg14"]

[sub_resource type="InputEventAction" id="InputEventAction_63s4n"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_u6srm"]
events = [SubResource("InputEventAction_63s4n")]

[sub_resource type="Animation" id="Animation_xpd4b"]
resource_name = "fade1"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("music1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-6.0, -9.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("music2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-80.0, -9.0, -6.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("music1:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j0pjy"]
resource_name = "fade2"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("music2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-6.0, -9.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("music2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("music1:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-80.0, -9.0, -6.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibwr1"]
_data = {
"fade1": SubResource("Animation_xpd4b"),
"fade2": SubResource("Animation_j0pjy")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tc2oa"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 1.5

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xl8ks"]
playback_mode = 1
random_pitch = 1.03
random_volume_offset_db = 2.0
streams_count = 2
stream_0/stream = ExtResource("18_c2c1g")
stream_0/weight = 20.149
stream_1/stream = ExtResource("19_wd568")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dki2l"]
playback_mode = 2
random_pitch = 1.05
random_volume_offset_db = 1.0
streams_count = 6
stream_0/stream = ExtResource("18_xxwj4")
stream_0/weight = 1.0
stream_1/stream = ExtResource("19_hrqua")
stream_1/weight = 1.0
stream_2/stream = ExtResource("20_3ague")
stream_2/weight = 1.0
stream_3/stream = ExtResource("21_kfdqh")
stream_3/weight = 1.0
stream_4/stream = ExtResource("23_8fldy")
stream_4/weight = 1.0
stream_5/stream = ExtResource("22_gjvw2")
stream_5/weight = 1.0

[node name="main2" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="player" type="Node" parent="UI"]
script = ExtResource("1_vsuuo")

[node name="SanGauge" parent="UI/player" instance=ExtResource("2_hqood")]
position = Vector2(1070, 670)

[node name="playerInfo" type="PanelContainer" parent="UI/player"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -740.0
offset_top = -120.0
offset_right = -420.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_340rr")
theme_override_styles/panel = ExtResource("3_78fr5")

[node name="edge" type="MarginContainer" parent="UI/player/playerInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="lvlGauge" type="HBoxContainer" parent="UI/player/playerInfo/edge"]
layout_mode = 2

[node name="lvlGauge1" type="VBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge"]
layout_mode = 2
size_flags_horizontal = 3

[node name="herb" type="HBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1"]
layout_mode = 2

[node name="herb" type="TextureRect" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/herb"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/herb"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "lbHerb"

[node name="number" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/herb"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 16
text = "0"

[node name="shroom" type="HBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1"]
layout_mode = 2

[node name="shroom" type="TextureRect" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/shroom"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/shroom"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "lbShroom"
autowrap_mode = 2

[node name="number" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge1/shroom"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 16
text = "0"

[node name="flamel" type="TextureRect" parent="UI/player/playerInfo/edge/lvlGauge"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="lvlGauge2" type="VBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge"]
layout_mode = 2
size_flags_horizontal = 3

[node name="salt" type="HBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2"]
layout_mode = 2

[node name="number" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/salt"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 16
text = "0"

[node name="Label" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/salt"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 16
text = "lbSalt"

[node name="salt" type="TextureRect" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/salt"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
size_flags_horizontal = 10
expand_mode = 1

[node name="shadow" type="HBoxContainer" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2"]
visible = false
layout_mode = 2

[node name="number" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/shadow"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0"

[node name="Label" type="Label" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/shadow"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 16
text = "lbShadow"

[node name="shadow" type="TextureRect" parent="UI/player/playerInfo/edge/lvlGauge/lvlGauge2/shadow"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
size_flags_horizontal = 10
expand_mode = 1

[node name="pauseMenu" type="PanelContainer" parent="UI/player"]
visible = false
z_index = 2
offset_left = 140.0
offset_top = 100.0
offset_right = 1140.0
offset_bottom = 660.0
mouse_filter = 2
theme = ExtResource("4_ttsoy")
theme_override_styles/panel = ExtResource("3_78fr5")

[node name="centerer" type="CenterContainer" parent="UI/player/pauseMenu"]
layout_mode = 2

[node name="pause" type="VBoxContainer" parent="UI/player/pauseMenu/centerer"]
layout_mode = 2

[node name="settings" type="Button" parent="UI/player/pauseMenu/centerer/pause" groups=["buttonClick"]]
layout_mode = 2
text = "btnSettings"

[node name="return" type="Button" parent="UI/player/pauseMenu/centerer/pause" groups=["buttonClick"]]
layout_mode = 2
text = "btnBack"

[node name="Container" type="Container" parent="UI/player/pauseMenu/centerer/pause"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="exit" type="Button" parent="UI/player/pauseMenu/centerer/pause" groups=["buttonClick"]]
layout_mode = 2
text = "btnExit"

[node name="warning" type="Label" parent="UI/player/pauseMenu/centerer/pause"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "lbWarning"

[node name="settings" type="HBoxContainer" parent="UI/player/pauseMenu/centerer"]
visible = false
layout_mode = 2

[node name="volume" parent="UI/player/pauseMenu/centerer/settings" instance=ExtResource("5_cmc5j")]
layout_mode = 2

[node name="settings" type="VBoxContainer" parent="UI/player/pauseMenu/centerer/settings"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="language" type="HBoxContainer" parent="UI/player/pauseMenu/centerer/settings/settings"]
visible = false
layout_mode = 2

[node name="languageSpace" type="Container" parent="UI/player/pauseMenu/centerer/settings/settings/language"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="languageLabel" type="Label" parent="UI/player/pauseMenu/centerer/settings/settings/language"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 42
text = "Language:"

[node name="languageSelector" type="OptionButton" parent="UI/player/pauseMenu/centerer/settings/settings/language" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = ExtResource("12_7mhwv")
theme_override_styles/normal = ExtResource("13_ixn2h")
theme_override_styles/hover = ExtResource("12_7mhwv")
theme_override_styles/pressed = ExtResource("12_7mhwv")
item_count = 3
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Bri'ish"
popup/item_1/id = 1
popup/item_2/text = "German"
popup/item_2/id = 2

[node name="speed" type="HBoxContainer" parent="UI/player/pauseMenu/centerer/settings/settings"]
layout_mode = 2
size_flags_vertical = 2

[node name="speedSpace" type="Container" parent="UI/player/pauseMenu/centerer/settings/settings/speed"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="speedModes" type="VBoxContainer" parent="UI/player/pauseMenu/centerer/settings/settings/speed"]
layout_mode = 2

[node name="zippy" type="HSplitContainer" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="zippyMode" type="CheckBox" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/zippy" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_group = ExtResource("14_pdgxm")

[node name="zippy" type="Label" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/zippy"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnZippy"

[node name="fast" type="HSplitContainer" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="fastMode" type="CheckBox" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/fast" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_group = ExtResource("14_pdgxm")

[node name="fast" type="Label" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/fast"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnFast"

[node name="normal" type="HSplitContainer" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="normalMode" type="CheckBox" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/normal" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_pressed = true
button_group = ExtResource("14_pdgxm")

[node name="normal" type="Label" parent="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/normal"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnNormal"

[node name="speedMode" type="Label" parent="UI/player/pauseMenu/centerer/settings/settings/speed"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 42
text = "lbSMode"

[node name="return" type="HBoxContainer" parent="UI/player/pauseMenu/centerer/settings/settings"]
layout_mode = 2

[node name="returnSpace" type="Container" parent="UI/player/pauseMenu/centerer/settings/settings/return"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="returnButton" type="Button" parent="UI/player/pauseMenu/centerer/settings/settings/return" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 3
text = "btnBack"

[node name="returnSpace2" type="Container" parent="UI/player/pauseMenu/centerer/settings/settings/return"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="pause" type="PanelContainer" parent="UI/player"]
z_index = 2
offset_right = 48.0
offset_bottom = 72.0
theme_override_styles/panel = ExtResource("4_kg58h")

[node name="centerer" type="CenterContainer" parent="UI/player/pause"]
layout_mode = 2

[node name="stacker" type="VBoxContainer" parent="UI/player/pause/centerer"]
layout_mode = 2

[node name="pauseButton" type="TextureButton" parent="UI/player/pause/centerer/stacker" groups=["buttonClick"]]
layout_mode = 2
toggle_mode = true
shortcut = SubResource("Shortcut_u6srm")
texture_normal = ExtResource("8_xaoot")
texture_pressed = ExtResource("12_3pav5")

[node name="gameOver" type="PanelContainer" parent="UI/player"]
visible = false
z_index = 2
offset_left = 240.0
offset_top = 110.0
offset_right = 1040.0
offset_bottom = 610.0
mouse_filter = 2
theme = ExtResource("4_ttsoy")
theme_override_styles/panel = ExtResource("3_78fr5")

[node name="centerer" type="CenterContainer" parent="UI/player/gameOver"]
layout_mode = 2

[node name="gameOver" type="VBoxContainer" parent="UI/player/gameOver/centerer"]
layout_mode = 2

[node name="centerer" type="CenterContainer" parent="UI/player/gameOver/centerer/gameOver"]
layout_mode = 2

[node name="end" type="Label" parent="UI/player/gameOver/centerer/gameOver/centerer"]
layout_mode = 2
text = "lbGameOver"

[node name="endSpace" type="Container" parent="UI/player/gameOver/centerer/gameOver"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="time" type="Label" parent="UI/player/gameOver/centerer/gameOver"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "lbTime"

[node name="mod" type="Label" parent="UI/player/gameOver/centerer/gameOver"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "lbMod"

[node name="score" type="Label" parent="UI/player/gameOver/centerer/gameOver"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "lbScore"

[node name="endSpace2" type="Container" parent="UI/player/gameOver/centerer/gameOver"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="return" type="Button" parent="UI/player/gameOver/centerer/gameOver" groups=["buttonClick"]]
layout_mode = 2
text = "btnExit"

[node name="music1" type="AudioStreamPlayer" parent="UI/player"]
stream = ExtResource("13_ttcps")
volume_db = -6.0
autoplay = true
bus = &"music"

[node name="music2" type="AudioStreamPlayer" parent="UI/player"]
stream = ExtResource("14_85mus")
volume_db = -80.0
bus = &"music"

[node name="endGameJingle" type="AudioStreamPlayer" parent="UI/player"]
bus = &"music"

[node name="fader" type="AnimationPlayer" parent="UI/player"]
libraries = {
"": SubResource("AnimationLibrary_ibwr1")
}

[node name="clickSound" type="AudioStreamPlayer" parent="UI/player"]
stream = SubResource("AudioStreamRandomizer_tc2oa")
max_polyphony = 5
bus = &"sfx"

[node name="hoverSound" type="AudioStreamPlayer" parent="UI/player"]
stream = SubResource("AudioStreamRandomizer_xl8ks")
pitch_scale = 10.0
bus = &"sfx"

[node name="hoverSoundS" type="AudioStreamPlayer" parent="UI/player"]
stream = SubResource("AudioStreamRandomizer_xl8ks")
volume_db = -9.0
pitch_scale = 10.0
bus = &"sfx"

[node name="levelUp" type="AudioStreamPlayer" parent="UI/player"]
stream = ExtResource("17_xkyus")
max_polyphony = 5
bus = &"sfx"

[node name="damage" type="AudioStreamPlayer" parent="UI/player"]
stream = SubResource("AudioStreamRandomizer_dki2l")
max_polyphony = 5
bus = &"sfx"

[node name="damage2" type="AudioStreamPlayer" parent="UI/player"]
max_polyphony = 5
bus = &"sfx"

[node name="potionShelf" parent="UI" instance=ExtResource("32_pfg14")]
offset_left = 1280.0
offset_bottom = -720.0
mouse_filter = 2

[node name="toolBox" type="CanvasLayer" parent="."]

[node name="toolBox" parent="toolBox" instance=ExtResource("20_3h17r")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 0.0
offset_bottom = 0.0
grow_vertical = 0

[node name="mobileCanvas" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="toolHandler" type="Node2D" parent="mobileCanvas"]
visibility_layer = 3
script = ExtResource("32_ecriy")

[node name="view" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
script = ExtResource("1_lfbyx")

[node name="generator" parent="." instance=ExtResource("22_qg68g")]
position = Vector2(640, 360)

[node name="light" type="DirectionalLight2D" parent="."]
rotation = 2.26893
blend_mode = 2
range_layer_max = 10
height = 0.69

[connection signal="pressed" from="UI/player/pauseMenu/centerer/pause/settings" to="UI/player" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/pause/return" to="UI/player" method="_on_pause_button_toggled" binds= [false]]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/pause/exit" to="UI/player" method="_on_exit_pressed"]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/zippy/zippyMode" to="UI/player" method="_on_zippy_mode_pressed"]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/fast/fastMode" to="UI/player" method="_on_fast_mode_pressed"]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/settings/settings/speed/speedModes/normal/normalMode" to="UI/player" method="_on_normal_mode_pressed"]
[connection signal="pressed" from="UI/player/pauseMenu/centerer/settings/settings/return/returnButton" to="UI/player" method="_on_return_button_pressed"]
[connection signal="toggled" from="UI/player/pause/centerer/stacker/pauseButton" to="UI/player" method="_on_pause_button_toggled"]
[connection signal="pressed" from="UI/player/gameOver/centerer/gameOver/return" to="UI/player" method="_on_exit_pressed"]
